# undergrad-research

./: .gitignore  builtins.ml  dune  main.ml  package-lock.json  package.json  utils.ml
LLM-Assistance-Examples/: LLM-Python-Assistance-Example-code.py  LLM-Python-Assistance-Example-code2.py  LLM-Python-Assistance.md  LLM-Python-Assistance2.md
LLM-linguistic-translations/google-gemini/2.5-Pro/cpp-translations/chat-code/: CMakeLists.txt  builtins.cpp  builtins.hpp  common_utils.cpp  common_utils.hpp  main.cpp  sonata_queries.cpp  sonata_queries.hpp
LLM-results/: Base-Prompt.md
LLM-results/LLM-assistance-ex-code/: LLM-Python-Assistance.txt  LLM-Python-Assistance2.txt
LLM-results/Phase-3-Translations/: Base-Prompt.md  Base-Prompt.txt
LLM-results/phase-2-translations/: Base-Prompt.txt
assisted-translations/cpp-files-paradigm-focus/: main.cpp  utils.cpp
assisted-translations/functionalist/cpp-functionalist/: builtins.hpp
assisted-translations/original-cpp-files/: utils.hpp
assisted-translations/original-ocaml/: main.ml
assisted-translations/original-ts-translations/: builtins-translated.ts  main-translated.ts
assisted-translations/py-files-paradigm-focus/: utils_translated.py
c-files/: utils.h  utils_translated.c
original-cpp-files/: builtins.cpp
original-ocaml/: builtins.ml  dune  main.ml  utils.ml
original-py-translations/: builtins_translated.py  main_translated.py  utils_translated.py
original-ts-translations/: builtins-translated.js  builtins-translated.ts  main-translated.js  main-translated.ts  utils-translated.js  utils-translated.ts
phase-2-translations/: Base-Prompt.txt
py-files/: builtins_translated.py  main_translated.py  translate.py  utils_translated.py
py-files-original/: main_translated.py
py-files-paradigm-focus/: builtins_translated.py  main_translated.py
rust-files-paradigm-focus/translation/: Cargo.toml
ts-files/: builtins-translated.ts  main-translated.ts  utils-translated.ts
(+213 files in other folders)
